--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,37 @@
-/* You can add global styles to this file, and also import other style files */
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+@import "./variables.scss";
+
+
+
+$theme: mat-dark-theme((
+  color: (
+    primary: $dark-primary,
+    accent: $dark-accent,
+    warn: $dark-warn,
+  )
+));
+
+@include angular-material-theme($theme);
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    @include angular-material-color($theme);
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    background-color: rgb(32, 32, 32);
+    display: grid;
+    grid-template-areas: 
+    ". | . | ."
+    ". | inputs | ."
+    ". | paste | ."
+    ". | buttons | ."
+    ". | . | .";
+    justify-items: center;
+    place-items: center;
+    color: $text-color;
+}
+
