Rename project from copypaste to pastinator.

--- a/frontend/src/app/add-paste/add-paste.component.html
+++ b/frontend/src/app/add-paste/add-paste.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <header class="header">
-        <h1 class="logo">CopyPaste</h1>
+        <h1 class="logo">pastinator</h1>
         <h2 class="subheader">
             Paste your long text<br>
             and get a convenient link.
