--- a/frontend/src/app/add-paste/add-paste.component.html
+++ b/frontend/src/app/add-paste/add-paste.component.html
@@ -8,17 +8,17 @@
     </header>
     <div class="inputs">
         <mat-form-field class="title">
-            <mat-label>Title</mat-label>
-            <input matInput>
+            <mat-label >Title</mat-label>
+            <input matInput [(ngModel)]='title' >
         </mat-form-field>
         <div>
             <mat-form-field class="username">
-                <mat-label>Username</mat-label>
-                <input matInput>
+                <mat-label >Author</mat-label>
+                <input matInput [(ngModel)]='author'>
             </mat-form-field>
             <mat-form-field class="expires">
-                <mat-label>Expires</mat-label>
-                <input matInput [matDatepicker]="picker">
+                <mat-label >Expires</mat-label>
+                <input matInput [matDatepicker]="picker" [(ngModel)]='expires'>
                 <mat-datepicker-toggle matSuffix [for]="picker">
                     <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
                 </mat-datepicker-toggle>
@@ -28,9 +28,9 @@
     </div>
     <mat-form-field class="paste">
         <mat-label>Paste</mat-label>
-        <textarea matInput class="paste-input"></textarea>
+        <textarea matInput class="paste-input" [(ngModel)]='paste'></textarea>
     </mat-form-field>
     <div class="buttons">
-        <button mat-stroked-button color="primary" class="get-link">Get a link</button>
+        <button mat-stroked-button color="primary" class="get-link" (click)="addPaste()">Get a link</button>
     </div>
 </div>
