Format paste white characters.

--- a/frontend/src/app/paste/paste.component.html
+++ b/frontend/src/app/paste/paste.component.html
@@ -10,7 +10,8 @@
             <button mat-stroked-button color="primary" class="get-link">Copy</button>
         </div>
     </header>
-    <div class="paste">
+    <pre class="paste" >
         {{ paste.paste }}
-    </div>
+    </pre>
+
 </div>
