--- a/frontend/src/app/add-paste/add-paste.component.html
+++ b/frontend/src/app/add-paste/add-paste.component.html
@@ -28,7 +28,7 @@
     </div>
     <mat-form-field class="paste">
         <mat-label>Paste</mat-label>
-        <textarea matInput class="paste-input" [(ngModel)]='paste'></textarea>
+        <textarea matInput  class="paste-input" [(ngModel)]="paste" (keydown.tab)="onKey($event)" #pasteInput></textarea>
     </mat-form-field>
     <div class="buttons">
         <button mat-stroked-button color="primary" class="get-link" (click)="addPaste()">Get a link</button>
