--- a/frontend/src/app/paste/paste.component.scss
+++ b/frontend/src/app/paste/paste.component.scss
@@ -5,11 +5,11 @@ body {
 .container {
     display: grid;
     grid-template-columns: auto 60% auto;
-    grid-template-areas: 
-    ".  .  ."
-    ". header ."
-    ". paste ."
-    ". . .";
+    grid-template-areas:
+        ".  .  ."
+        ". header ."
+        ". paste ."
+        ". . .";
     align-content: center;
     justify-content: center;
     height: 100vh;
@@ -18,6 +18,7 @@ body {
 
 .paste {
     grid-area: paste;
+    white-space: pre-wrap;
 }
 
 .header {
