--- a/frontend/src/app/paste/paste.component.html
+++ b/frontend/src/app/paste/paste.component.html
@@ -7,7 +7,7 @@
             by {{ paste.author }}
         </h2>
         <div class="buttons">
-            <button mat-stroked-button color="primary" class="get-link" (click)="cp.copy()">Copy</button>
+            <button mat-stroked-button color="primary" class="get-link" (click)="cp.copy(); copyPaste()">Copy</button>
         </div>
     </header>
     <pre class="paste" ngxCopyPaste #cp="copy">
