Re-style PasteComponent.

--- a/frontend/src/app/paste/paste.component.scss
+++ b/frontend/src/app/paste/paste.component.scss
@@ -11,14 +11,17 @@ body {
         ". header ."
         ". paste ."
         ". . .";
-    align-content: center;
-    justify-content: center;
     height: 100vh;
+    grid-template-rows: 0.1fr auto 10% 1fr;
+
+    /* fix: minimum width of 0 */
+    grid-template-rows: minmax(0, 0.1fr) auto 10% minmax(0, 1fr);
 }
 
 .paste {
     grid-area: paste;
     white-space: pre-wrap;
+    min-height: 0;
 }
 
 .header {
@@ -41,3 +44,37 @@ body {
     margin-bottom: 15px;
 }
 
+@media (max-width: 1600px) {
+
+    .title {
+        font-size: 3vw
+    }
+
+    .author {
+        font-size: 1vw;
+    }
+
+}
+
+@media (max-width: 1100px) {
+
+    .title {
+        font-size: 4vw
+    }
+
+    .author {
+        font-size: 1.3vw;
+    }
+
+}
+
+@media (max-width: 700px) {
+
+    .title {
+        font-size: 6vw
+    }
+    .author {
+        font-size: 2vw;
+    }
+
+}
