--- a/frontend/src/styles.sass
+++ b/frontend/src/styles.sass
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+@import "./variables.sass"
+
+body
+    @include angular-material-color($theme)
+    margin: 0
+    font-family: Roboto, "Helvetica neue", sans-serif
+    background-color: $background-color
+    color: $text-color
+
+html, body
+    height: 100%
