--- a/frontend/src/styles.sass
+++ b/frontend/src/styles.sass
@@ -1,4 +1,5 @@
 @import "./variables.sass"
+@import '~@angular/material/prebuilt-themes/indigo-pink.css'
 
 body
     @include angular-material-color($theme)
