--- a/frontend/src/app/paste/paste.component.sass
+++ b/frontend/src/app/paste/paste.component.sass
@@ -4,7 +4,6 @@
     grid-template-areas: ". . ." ". header ." ". paste ." ". . ."
     grid-template-rows: auto auto max(80%, 0) auto
     grid-auto-rows: fit-content(1em)
-    padding: 40px
     height: 100vh
 
 .paste
@@ -12,6 +11,7 @@
     white-space: pre-wrap
 
 .header
+    margin-top: 40px
     grid-area: header
 
 .title
