Add NotFoundComponent markup.

--- a/frontend/src/app/not-found/not-found.component.html
+++ b/frontend/src/app/not-found/not-found.component.html
@@ -1,1 +1,6 @@
-<p>not-found works!</p>
+<div class="container">
+    <h1 class="message">
+        The page you're looking for was not found. <br/>
+        You will be automatically redirected to homepage in a while.
+    </h1>
+</div>
