--- a/frontend/src/variables.sass
+++ b/frontend/src/variables.sass
@@ -1,9 +1,9 @@
-@import "~@angular/material2/theming"
+@import "~@angular/material/theming"
 @include mat-core()
 
 $dark-primary:  mat-palette($mat-blue-gray)
 $dark-accent: mat-palette($mat-amber, A200, A100, A400)
-$mat-warn: mat-palette($mat-deep-orange)
+$dark-warn: mat-palette($mat-deep-orange)
 
 $primary-color: mat-color($dark-primary)
 $accent-color: mat-color($dark-accent)
