--- a/frontend/src/app/add-paste/add-paste.component.html
+++ b/frontend/src/app/add-paste/add-paste.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <header class="header">
         <h1 class="logo">pastinator</h1>
-        <h2 class="subheader">
+        <h2 class="subtitle">
             Paste your long text<br/>
             and get a convenient link.
         </h2>
@@ -12,24 +12,25 @@
             <input matInput>
         </mat-form-field>
         <div>
-            <mat-form-field class="Author">
+            <mat-form-field class="author">
                 <mat-label>Author</mat-label>
                 <input matInput>
             </mat-form-field>
             <mat-form-field class="expires">
                 <mat-label>Expires</mat-label>
                 <input matInput [matDatepicker]="picker">
-                <mat-datepicker-toggle matSuuffix [for]="picker">
+                <mat-datepicker-toggle matSuffix [for]="picker">
                     <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
                 </mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
         </div>
-        <mat-form-field class="paste">
-            <mat-label>Title</mat-label>
-            <textarea matInput class="paste-input" #pasteInput></textarea>
-        </mat-form-field>
+        
     </div>
+    <mat-form-field class="paste">
+        <mat-label>Title</mat-label>
+        <textarea matInput class="paste-input" #pasteInput></textarea>
+    </mat-form-field>
     <div class="buttons">
         <button mat-stroked-button color="primary" class="get-paste">
             Get a link
