--- a/frontend/src/app/add-paste/add-paste.component.html
+++ b/frontend/src/app/add-paste/add-paste.component.html
@@ -9,16 +9,16 @@
     <div class="inputs">
         <mat-form-field class="title">
             <mat-label>Title</mat-label>
-            <input matInput>
+            <input matInput [(ngModel)]="title">
         </mat-form-field>
         <div>
             <mat-form-field class="author">
                 <mat-label>Author</mat-label>
-                <input matInput>
+                <input matInput [(ngModel)]="author">
             </mat-form-field>
             <mat-form-field class="expires">
                 <mat-label>Expires</mat-label>
-                <input matInput [matDatepicker]="picker">
+                <input matInput [matDatepicker]="picker" [(ngModel)]="expires" [matDatepickerFilter]="isDateSelectable">
                 <mat-datepicker-toggle matSuffix [for]="picker">
                     <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
                 </mat-datepicker-toggle>
@@ -29,10 +29,11 @@
     </div>
     <mat-form-field class="paste">
         <mat-label>Title</mat-label>
-        <textarea matInput class="paste-input" #pasteInput></textarea>
+        <textarea matInput class="paste-input" #pasteInput [(ngModel)]="paste"></textarea>
     </mat-form-field>
     <div class="buttons">
-        <button mat-stroked-button color="primary" class="get-paste">
+        <button mat-stroked-button color="primary" class="get-paste" (click)="addPaste()">
             Get a link
         </button>
     </div>
+</div>
